# exercism-rust-solutions

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
accumulate/src/: lib.rs
acronym/: Cargo.toml
acronym/src/: lib.rs
affine-cipher/src/: lib.rs
all-your-base/src/: lib.rs
allergies/src/: lib.rs
allergies/tests/: allergies.rs
alphametics/src/: lib.rs
alphametics/tests/: alphametics.rs
anagram/: Cargo.toml
anagram/src/: lib.rs
armstrong-numbers/src/: lib.rs
atbash-cipher/src/: lib.rs
beer-song/: Cargo.toml
beer-song/src/: lib.rs
binary-search/src/: lib.rs
bob/src/: lib.rs
bob/tests/: bob.rs
bowling/src/: lib.rs
bowling/tests/: bowling.rs
circular-buffer/src/: lib.rs
clock/src/: lib.rs
collatz-conjecture/src/: lib.rs
crypto-square/: Cargo.toml
crypto-square/src/: lib.rs
custom-set/src/: lib.rs
diamond/src/: lib.rs
diffie-hellman/src/: lib.rs
dot-dsl/src/: lib.rs
etl/src/: lib.rs
fizzy/src/: lib.rs
gigasecond/src/: lib.rs
grade-school/src/: lib.rs
grade-school/tests/: grade-school.rs
grains/src/: lib.rs
hamming/src/: lib.rs
high-scores/src/: lib.rs
high-scores/tests/: high-scores.rs
isbn-verifier/src/: lib.rs
isogram/: Cargo.toml
isogram/src/: lib.rs
largest-series-product/src/: lib.rs
largest-series-product/tests/: largest-series-product.rs
leap/tests/: leap.rs
luhn-from/src/: lib.rs
luhn-from/tests/: luhn-from.rs
luhn-trait/: Cargo.toml
luhn-trait/src/: lib.rs
luhn-trait/tests/: luhn-trait.rs
luhn/src/: lib.rs
macros/src/: lib.rs
matching-brackets/src/: lib.rs
ocr-numbers/: Cargo.toml
pig-latin/: Cargo.toml
run-length-encoding/: Cargo.toml
saddle-points/: Cargo.toml
scrabble-score/: Cargo.toml
sieve/: Cargo.toml
space-age/: Cargo.toml
tournament/: Cargo.toml
wordy/: Cargo.toml
(+52 files in other folders)
