[workspace]
members = [
    "accumulate/",
    "acronym/",
    "affine-cipher/",
    "allergies/",
    "all-your-base/",
    "alphametics/",
    "anagram/",
    "armstrong-numbers/",
    "atbash-cipher/",
    "beer-song/",
    "binary-search/",
    "bob/",
    "bowling/",
    "circular-buffer/",
    "clock/",
    "collatz-conjecture/",
    "crypto-square/",
    "custom-set/",
    "diamond/",
    "difference-of-squares/",
    "diffie-hellman/",
    "dot-dsl/",
    "etl/",
    "fizzy/",
    "gigasecond/",
    "grade-school/",
    "grains/",
    "hamming/",
    "hello-world/",
    "high-scores/",
    "isbn-verifier/",
    "isogram/",
    "largest-series-product/",
    "leap/",
    "luhn/",
    "luhn-from/",
    "luhn-trait/",
    "matching-brackets/",
    "minesweeper/",
    "nth-prime/",
    "nucleotide-count/",
    "ocr-numbers/",
    "paasio/",
    "palindrome-products/",
    "pangram/",
#    "parallel-letter-frequency/",
    "pascals-triangle/",
    "perfect-numbers/",
    "phone-number/",
#    "pig-latin/",
    "prime-factors/",
    "protein-translation/",
    "proverb/",
    "pythagorean-triplet/",
    "queen-attack/",
    "rail-fence-cipher/",
    "raindrops/",
    "react/",
#    "rectangles/",
    "reverse-string/",
    "rna-transcription/",
    "robot-name/",
    "robot-simulator/",
    "roman-numerals/",
    "rotational-cipher/",
    "run-length-encoding/",
    "saddle-points/",
    "say/",
    "scrabble-score/",
    "series/",
    "sieve/",
    "simple-cipher/",
    "simple-linked-list/",
    "space-age/",
    "spiral-matrix/",
    "sublist/",
    "sum-of-multiples/",
    "tournament/",
    "triangle/",
    "two-bucket/",
    "variable-length-quantity/",
    "word-count/",
    "wordy/",
]
